[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "project_name"  # replace with your package name
version = "0.1.0"
description = "A short description of project_name"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

dependencies = [
  # Example: "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4.0",
  "mypy>=1.0",
  "coverage[toml]>=7.0",
  "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/etempelman/project_name"
Repository = "https://github.com/etempelman/project_name"
Issues = "https://github.com/etempelman/project_name/issues"
Documentation = "https://github.com/etempelman/project_name/docs"

[tool.hatch.version]
path = "src/project_name/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # style
    "F",  # errors
    "I",  # imports
    "B",  # bugbear
    "UP", # modern python
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false

[tool.coverage.run]
branch = true
source = ["src/project_name"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --verbose --capture=tee-sys"
testpaths = ["tests"]
